--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.1",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "ngrok": "^3.2.5",
     "ts-node-dev": "^1.0.0-pre.44",
