--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index",
-    "dev": "ts-node-dev --respawn index.ts",
     "lint": "tslint -p . -c tslint.json -t stylish",
     "ngrok": "./node_modules/ngrok/bin/ngrok http 5000"
   },
@@ -16,15 +15,20 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "module-alias": "^2.2.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "ngrok": "^3.2.5",
-    "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^5.20.1",
     "typescript": "^3.7.2"
+  },
+  "_moduleAliases": {
+    "modules": "dist/app/modules",
+    "utils": "dist/app/utils",
+    "config": "dist/app/config"
   }
 }
