--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist",
-    "dev": "concurrently --kill-others \"tsc -w\" \"nodemon dist\"",
+    "dev": "concurrently --kill-others \"tsc -w\" \"nodemon dist -e js,pug\"",
     "lint": "tslint -p . -c tslint.json -t stylish",
     "ngrok": "./node_modules/ngrok/bin/ngrok http 5000"
   },
@@ -17,13 +17,17 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/fs-extra": "^8.0.1",
+    "concurrently": "^5.0.0",
     "ngrok": "^3.2.5",
+    "nodemon": "^2.0.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.2"
   },
