--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "fs-extra": "^8.1.0",
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2"
