--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/fs-extra": "^8.0.1",
+    "@types/uuid": "^3.4.6",
     "concurrently": "^5.0.0",
     "cpy-cli": "^3.0.0",
     "ngrok": "^3.2.5",
