--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "form-data": "^3.0.0",
     "fs-extra": "^8.1.0",
     "http-status-codes": "^1.4.0",
+    "lodash": "^4.17.15",
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/fs-extra": "^8.0.1",
+    "@types/lodash": "^4.14.149",
     "@types/uuid": "^3.4.6",
     "concurrently": "^5.0.0",
     "cpy-cli": "^3.0.0",
