--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
     "form-data": "^3.0.0",
     "fs-extra": "^8.1.0",
+    "helmet": "^3.21.2",
     "http-status-codes": "^1.4.0",
     "lodash": "^4.17.15",
     "module-alias": "^2.2.2"
@@ -29,7 +31,9 @@
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/express-rate-limit": "^3.3.3",
     "@types/fs-extra": "^8.0.1",
+    "@types/helmet": "0.0.45",
     "@types/lodash": "^4.14.149",
     "@types/uuid": "^3.4.6",
     "concurrently": "^5.0.0",
