--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "helmet": "^3.21.2",
     "http-status-codes": "^1.4.0",
     "lodash": "^4.17.15",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
@@ -35,6 +36,7 @@
     "@types/fs-extra": "^8.0.1",
     "@types/helmet": "0.0.45",
     "@types/lodash": "^4.14.149",
+    "@types/multer": "^1.3.10",
     "@types/uuid": "^3.4.6",
     "concurrently": "^5.0.0",
     "cpy-cli": "^3.0.0",
